WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42355
WebKitTestRunner goes off the deep end, spinning in a dispatch queue thread
https://bugs.webkit.org/show_bug.cgi?id=42355
Summary
WebKitTestRunner goes off the deep end, spinning in a dispatch queue thread
Maciej Stachowiak
Reported
2010-07-15 03:53:16 PDT
On the following tests, WebKitTestRunner goes crazy, using more than 100% CPU apparently handling a flood of mach messages: fast/block/basic/min-pref-width-nowrap-floats.html editing/style/5017613-2.html fast/forms/input-appearance-focus.html svg/clip-path/clip-path-on-g.svg tables/mozilla_expected_failures/marvin/table_overflow_style_reflow_row_sibling.html
Attachments
Sample of WebKitTestRunner
(12.15 KB, text/plain)
2010-07-15 03:54 PDT
,
Maciej Stachowiak
no flags
Details
Patch
(3.83 KB, patch)
2010-07-15 11:20 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2010-07-15 03:54:31 PDT
Created
attachment 61634
[details]
Sample of WebKitTestRunner Attached a sample of WebKitTestRunner while it is in this spinning state. This is easily reproducible running WebKitTestRunner on one of the tests by hand.
Maciej Stachowiak
Comment 2
2010-07-15 04:10:24 PDT
<
rdar://problem/8194510
>
Anders Carlsson
Comment 3
2010-07-15 11:20:42 PDT
Created
attachment 61691
[details]
Patch
Anders Carlsson
Comment 4
2010-07-15 11:49:59 PDT
Committed
r63442
: <
http://trac.webkit.org/changeset/63442
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug