WebKitTestRunner goes off the deep end, spinning in a dispatch queue thread https://bugs.webkit.org/show_bug.cgi?id=42355

Reviewed by Darin Adler.

Sometimes, when receiving a message whose size is very close to the inlineMessageMaxSize,
mach_msg would return with MACH_RCV_TOO_LARGE. In debug builds we would assert, but in release
builds we would just bail and the receiveSourceEventHandler would be run again shortly since we didn't
actually pull the message off the mach message queue.

Fix this by setting the receive source buffer size to include the maximum message trailer size, which
mach_msg requires. Also, handle mach_msg returning MACH_RCV_TOO_LARGE (even though in theory it would never happen
now that the receivedBufferSize always includes the maximum message trailer size.

* Platform/CoreIPC/mac/ConnectionMac.cpp:
(CoreIPC::Connection::receiveSourceEventHandler):
Use a Vector with inline data instead of a char array. This way we can resize the Vector if the message received
is too big.

Canonical link: https://commits.webkit.org/54290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63442 268f45cc-cd09-0410-ab3c-d52691b4dbfc